<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/RelativeLayout01"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        tools:context="com.example.dina.justjava.MainActivity">


        <EditText
            android:id="@+id/name_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="16dp"
            android:hint="@string/enter_name"
            android:textAllCaps="true"
            android:inputType="textCapWords" />

        <TextView
            android:id="@+id/textView_Quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textAllCaps="true"
            android:layout_marginBottom="16dp"
            android:layout_below="@id/name_view"
            />
<LinearLayout
    android:id="@+id/linear_layout_01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_below="@+id/textView_Quantity">

        <Button
            android:id="@+id/button_Decrement"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="decrement"
            android:text="-" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="0"
            android:textColor="#000000"
             />

        <Button
            android:id="@+id/button_Increment"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="increment"
            android:text="+" />
</LinearLayout>

        <TextView
            android:id="@+id/toppings_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_below="@+id/linear_layout_01"
            android:text="@string/toppings"
            android:textAllCaps="true"
            />

        <CheckBox
            android:id="@+id/whipped_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingLeft="24dp"
            android:layout_below="@+id/toppings_text_view"
            android:text="@string/whipped_cream"
            android:textSize="16sp"
            android:onClick="onCheckboxClicked"
            android:textAppearance="?android:textAppearanceMedium" />


        <CheckBox
            android:id="@+id/cinnamon_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingLeft="24dp"
            android:textSize="16sp"
            android:layout_below="@+id/whipped_checkbox"
            android:text="@string/cinnamon"
            android:onClick="onCheckboxClicked"
            android:textAppearance="?android:textAppearanceMedium" />


        <TextView
            android:id="@+id/textView_orderSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/order_summary"
            android:layout_below="@+id/cinnamon_checkbox"
            />

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="$0"
            android:textColor="#000000"
            android:layout_below="@+id/textView_orderSummary" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/order"
            android:onClick="submitOrder"
            android:layout_below="@+id/order_summary_text_view"
            />


    </RelativeLayout>
</ScrollView>